# deepin-lianliankan

./: CMakeLists.txt  README.md  README.zh_CN.md  linglong.yaml
.reuse/: dep5
.tx/: config  transifex.yaml
debian/: changelog  com.deepin.lianliankan.1  control  copyright  debhelper-build-stamp  deepin-lianliankan.1  deepin-lianliankan.substvars  files  manpages
debian/.debhelper/deepin-lianliankan/: dbgsym-build-ids
debian/.debhelper/deepin-lianliankan/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/deepin-lianliankan/dbgsym-root/usr/share/doc/: deepin-lianliankan-dbgsym
debian/deepin-lianliankan/DEBIAN/: control  md5sums
debian/deepin-lianliankan/usr/share/applications/: deepin-lianliankan.desktop
debian/deepin-lianliankan/usr/share/doc/deepin-lianliankan/: copyright
src/: CMakeLists.txt  main.cpp  resources.qrc  translate_generation.sh
src/assets/: com.deepin.lianliankan.desktop
src/assets/deepin-lianliankan/lianliankan/en_US/: lianliankan.md
src/assets/deepin-lianliankan/lianliankan/zh_CN/: lianliankan.md
src/assets/deepin-lianliankan/lianliankan/zh_HK/: lianliankan.md
src/assets/deepin-lianliankan/lianliankan/zh_TW/: lianliankan.md
src/source/: closewindowdialog.cpp  closewindowdialog.h  controlbutton.cpp  controlbutton.h  gameblureffectwidget.cpp  gameblureffectwidget.h  gamebutton.cpp  gamebutton.h  gamecontrol.cpp  gamecontrol.h  gameframe.cpp  gameframe.h  gamelinescene.cpp  gamelinescene.h  gameoverblureffectwidget.cpp  gameoverblureffectwidget.h  gamepage.cpp  gamepage.h  gameprogressbar.cpp  gameprogressbar.h  gamewindow.cpp  gamewindow.h  global.h  gridblureffectwidget.cpp  gridblureffectwidget.h  lianliankanapplication.cpp  lianliankanapplication.h  llkstyle.cpp  llkstyle.h  mainpage.cpp  mainpage.h  mainwidnow.cpp  mainwidnow.h  mainwindow.cpp  mainwindow.h  shadowlabel.cpp  shadowlabel.h  utils.cpp  utils.h
tests/: CMakeLists.txt  cmake-lcov-test.sh  test-prj-running.sh
tests/src/: ut_closewindowdialog.cpp  ut_gameblureffectwidget.cpp  ut_gamebutton.cpp  ut_gamecontrol.cpp  ut_gamelinescene.cpp  ut_gameoverblureffectwidget.cpp  ut_gamepage.cpp  ut_gameprogressbar.cpp  ut_lianliankanapplication.cpp  ut_mainpage.cpp  ut_mainwindow.cpp  ut_shadowlabel.cpp  ut_utils.cpp
translations/: com-deepin.lianliankan.ts  com.deepin.lianliankan.ts  com.deepin.lianliankan_es.ts  com.deepin.lianliankan_nl.ts  com.deepin.lianliankan_pl.ts  com.deepin.lianliankan_pt.ts  com.deepin.lianliankan_ru.ts  com.deepin.lianliankan_sq.ts  com.deepin.lianliankan_tr.ts  com.deepin.lianliankan_ug.ts  com.deepin.lianliankan_zh_CN.ts  com.deepin.lianliankan_zh_HK.ts  com.deepin.lianliankan_zh_TW.ts  deepin-lianliankan.ts  deepin-lianliankan_ady.ts  deepin-lianliankan_af.ts  deepin-lianliankan_am_ET.ts  deepin-lianliankan_ar.ts  deepin-lianliankan_ast.ts  deepin-lianliankan_az.ts  deepin-lianliankan_bg.ts  deepin-lianliankan_bn.ts  deepin-lianliankan_bo.ts  deepin-lianliankan_bqi.ts  deepin-lianliankan_br.ts  deepin-lianliankan_ca.ts  deepin-lianliankan_cs.ts  deepin-lianliankan_da.ts  deepin-lianliankan_de.ts  deepin-lianliankan_el.ts  deepin-lianliankan_en_AU.ts  deepin-lianliankan_eo.ts  deepin-lianliankan_es.ts  deepin-lianliankan_et.ts  deepin-lianliankan_eu.ts  deepin-lianliankan_fa.ts  deepin-lianliankan_fi.ts  deepin-lianliankan_fil.ts  deepin-lianliankan_fr.ts  deepin-lianliankan_gl_ES.ts  (+50 more)
translations/desktop/: com.deepin.lianliankan.desktop  deepin-lianliankan.desktop  desktop.ts  desktop_az.ts  desktop_bo.ts  desktop_ca.ts  desktop_cs.ts  desktop_de.ts  desktop_en_US.ts  desktop_es.ts  desktop_fi.ts  desktop_fr.ts  desktop_hr.ts  desktop_hu.ts  desktop_it.ts  desktop_lo.ts  desktop_nl.ts  desktop_pl.ts  desktop_pt.ts  desktop_pt_BR.ts  desktop_ru.ts  desktop_sq.ts  desktop_sr.ts  desktop_tr.ts  desktop_ug.ts  desktop_uk.ts  desktop_zh_CN.ts  desktop_zh_HK.ts  desktop_zh_TW.ts
